--- a/muntjac/public/index.html
+++ b/muntjac/public/index.html
@@ -142,7 +142,7 @@
 						<p>To run the test suite you must also install:</p>
 						<p>
 						<ul>
-							<li><a href="http://pypi.python.org/pypi/Mox">Mox</a> &ndash; Mock object framework</li>
+							<li><a href="http://pypi.python.org/pypi/mox">Mox</a> &ndash; Mock object framework</li>
 						</ul>
 						</p>
 						<p>All of these libraries are pure Python and available from the <a href="http://pypi.python.org/pypi/">PyPI</a>.</p>
